--- a/deskover-ecommerce-website/src/main/resources/templates/account_order.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/account_order.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" th:replace="~{layout/layout :: layout(  
-        ~{::title},
-        ~{::modal},
-        ~{::#content}
+	~{::title},
+    ~{::modal_out},
+    ~{::modal_in},
+    ~{::#handheld},
+    ~{::#content}
     )}">
 
 <head>
