--- a/deskover-ecommerce-website/src/main/resources/templates/ok.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/ok.html
@@ -35,7 +35,7 @@
 	           <h2 class="h4 pb-3">Cảm ơn vì đã mua hàng tại deskover!</h2>
 	           <p class="fs-sm mb-2">Đơn hàng của bạn đang chờ xử lí</p>
 	           <p class="fs-sm mb-2">Hãy đảm bảo đia chỉ email của bạn đúng <span class='fw-medium'>34VB5540K83.</span></p>
-	           <p class="fs-sm">Vui lòng kiểm tra email của bạn về tình trạng đơn hàng. <a href="/invoice">Kiểm tra hóa đơn</a></p><a class="btn btn-secondary mt-3 me-3" href="/shop">Hủy đơn hàng</a><a class="btn btn-primary mt-3" href="order-tracking.html"><i class="ci-location"></i>&nbsp;Track order</a>
+	           <p class="fs-sm">Vui lòng kiểm tra email của bạn về tình trạng đơn hàng. <a href="/invoice">Quay lại trang chủ</a></p><a class="btn btn-secondary mt-3 me-3" href="/shop">Hủy đơn hàng</a><a class="btn btn-primary mt-3" href="order-tracking.html"><i class="ci-location"></i>&nbsp;Track order</a>
 	         </div>
 	       </div>
 	     </div>
