--- a/deskover-dashboard-website/src/app/components/home/manage/customers/customers.component.html
+++ b/deskover-dashboard-website/src/app/components/home/manage/customers/customers.component.html
@@ -38,6 +38,7 @@
             <tr>
               <th class="align-middle">Ảnh đại diện</th>
               <th class="align-middle">Họ và tên</th>
+              <th class="align-middle">Email</th>
               <th class="align-middle text-center">Ngày cập nhật</th>
               <th class="align-middle text-center">Cập nhật bởi</th>
               <th class="align-middle text-center">Lần đăng nhập cuối</th>
@@ -53,6 +54,9 @@
               </td>
               <td class="align-middle">
                 {{ user.fullname }}
+              </td>
+              <td class="align-middle">
+                {{ user.email }}
               </td>
               <td class="align-middle text-center">
                 {{ user.modifiedAt | date: 'dd/MM/yyyy' }}
