--- a/deskover-dashboard-website/src/assets/scss/_common.scss
+++ b/deskover-dashboard-website/src/assets/scss/_common.scss
@@ -83,6 +83,10 @@
   background-color: rgba(0, 150, 136, .09) !important;
 }
 
+.bg-faded-secondary {
+  background-color: rgba(0, 0, 0, .09) !important;
+}
+
 @media (max-width: 575.98px) {
   .w-sm-100 {
     width: 100%;
